Simplifies sync and removes all the un-needed junk from the script.